--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "rc-slider": "^10.2.1",
