--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@remixicon/react": "^4.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,10 +29,11 @@
     "react-loading-skeleton": "^3.4.0",
     "react-owl-carousel": "^2.3.3",
     "react-rating-stars-component": "^2.2.0",
-    "react-router-dom": "^6.14.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-share": "^4.4.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
     "swiper": "^10.3.1",
